--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "ajv": "^8.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5"
+    "typescript": "^4.9.5"
+  },
+  "resolutions": {
+    "ajv": "^8.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,4 +41,3 @@
     ]
   }
 }
-
