--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,8 @@
 {
-  "buildCommand": "npm install && npm run build",
+  "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "outputDirectory": "build",
   "framework": "create-react-app",
-  "installCommand": "npm install --legacy-peer-deps"
+  "installCommand": "npm install --legacy-peer-deps",
+  "nodeVersion": "18.x"
 }
 
