--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,6 @@
   "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "outputDirectory": "build",
   "framework": "create-react-app",
-  "installCommand": "npm install --legacy-peer-deps",
-  "nodeVersion": "18.x"
+  "installCommand": "npm install --legacy-peer-deps"
 }
 
